fixing page alignment

--- a/src/app.css
+++ b/src/app.css
@@ -19,11 +19,10 @@
     margin: 0;
 }
 
-.header h2 {
-    color: #ffffff;
-    font-family: 'Helvetica Neue', Arial, sans-serif;
-    margin: 0;
-    padding-left: 25px;
+body {
+    display: block !important;
+    padding-left: 0 !important;
+    justify-content: normal !important;
 }
 
 body {
